[tool.poetry]
name = "automacao-paramiko"
version = "0.1.0"
description = ""
authors = ["miguel <miguelcamposdasilva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
netmiko = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
